--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/buildersLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -37,6 +38,31 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div
+      id="viewer-container"
+      style="
+        position: absolute;
+        top: 30%;
+        left: 30%;
+        color: blue;
+        text-align: center;
+        border: 3px solid lime;
+        height: 400px;
+        width: 600px;
+        overflow: hidden;
+      "
+    ></div>
+    <div
+      id="fileInput"
+      style="
+        position: absolute;
+        top: 26%;
+        left: 30%;
+        color: blue;
+        text-align: center;
+        overflow: hidden;
+      "
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
