--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
       rel="stylesheet"
     />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- Global site tag (gtag.js) - Google Analytics snippet -->
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-91DYDN0VZB"
     ></script>
@@ -44,7 +44,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-91DYDN0VZB');
-    </script>
+    </script> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
