Use GA4 tag setup.

--- a/public/index.html
+++ b/public/index.html
@@ -32,19 +32,16 @@
     />
 
     <!-- Global site tag (gtag.js) - Google Analytics snippet -->
-    <!-- <script
+    <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-91DYDN0VZB"
+      src="https://www.googletagmanager.com/gtag/js?id=G-S8TR3R9TWB"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
+      function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
-
-      gtag('config', 'G-91DYDN0VZB');
-    </script> -->
+      gtag('config', 'G-S8TR3R9TWB');
+    </script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
