--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="icon" href="%PUBLIC_URL%/buildersLogo.png" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="buildersLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -35,12 +29,14 @@
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-S8TR3R9TWB"
-    ></script>
+      ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'G-S8TR3R9TWB');
+      gtag('config', 'G-S8TR3R9TWB', {
+        'test': `random`
+      });
     </script>
 
     <!--
