--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="icon" href="buildersLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,13 +28,15 @@
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-S8TR3R9TWB"
-      ></script>
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
       gtag('config', 'G-S8TR3R9TWB', {
-        'test': `random`
+        test: `random`,
       });
     </script>
 
