clean code properly

--- a/web/404.html
+++ b/web/404.html
@@ -1,1 +1,6 @@
-<html lang="en"><head><meta http-equiv="refresh" content="0; URL=/Share/"></head><body></body></html>
+<html lang="en">
+  <head>
+    <meta http-equiv="refresh" content="0; URL=/Share/" />
+  </head>
+  <body></body>
+</html>
