--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset='utf-8'>
   <title>BLDRS - Redirect</title>
   <!-- Start Single Page Apps for GitHub Pages -->
-  <script type="text/javascript">
+  <script type='text/javascript'>
     // Single Page Apps for GitHub Pages
     // MIT License
     // https://github.com/rafgraph/spa-github-pages
