--- a/web/404.html
+++ b/web/404.html
@@ -1,7 +1,7 @@
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta http-equiv="refresh" content="0; URL=/Share/">
+  <meta http-equiv='refresh' content='0; URL=/Share/'>
 </head>
 
 <body></body>
