VYZN: Viewer: UI configuration via Matrix config message (#525)
* fix: turn off the y-axis lock of the ifc clipper component

* refactor: widget api event registery and add support for ui visibility msg

* widget api package and version lock added

* wire up ui visibility controls to ui components + supporting changes

* test: tidy up e2e tests and add test for ui visibility msg

* guard againist non initialized viewer

* fix: cad view failing 'selects the element ID from URL' test

* fix: ui components visibility modified to be set per button group

* fix: ui visibility e2e test

* fix: linter issue in ops. group component

* remoe unused hook

* linter linebreak style

* fix conflicts

* fix linter linebreak rule

* Removing ApiSlice For debouncing

* merging Selection/Deselction into one Event

* Model Loaded Event

* porting initial changes to the test files

* fix linting problems

* fix linting issues

* fix: guards order in SelectElementsEventHandler

* fix: remove debouncing state setters

* fix: yarn lock conflicts

* update yarn file

* update packages

* fix linter issues

* package version fix

* refactor: arrays are equal utility

* fix: remove momentum model from e2e tests, use minimal ifc to intercept remote calls

* version update

---------

Signed-off-by: Ibrahim Saad <ibrahimsaad419@gmail.com>
Co-authored-by: Ibrahim Saad <ibrahim.saad@xbim.net>
Co-authored-by: Abdelrahman Zien <a.osamamail@gmail.com>

--- a/cypress/fixtures/bldrs-inside-iframe.html
+++ b/cypress/fixtures/bldrs-inside-iframe.html
@@ -18,7 +18,6 @@
     <!-- Flag is set once Matrix Widget API is ready -->
     <input id="cbxIsReady" type="checkbox"></input>
     <label for="cbxIsReady">Is Ready</label>
-    <br/>
 
     <!-- Contains the last message received from the iframe through Matrix Widget API -->
     <input id="txtLastMsg" type="text"></input>
@@ -26,9 +25,22 @@
     <br/>
 
     <!-- Sends a message to the iframe through Matrix Widget API -->
-    <input id="txtSendMessageType" type="text" placeholder="message type"></input>
-    <input id="txtSendMessagePayload" type="text" placeholder="message payload"></input>
-    <input id="btnSendMessage" type="button" value="Send"></input>
+    <div class="send-actions d-flex">
+      <input id="txtSendMessageType" type="text" placeholder="message type"></input>
+      <input id="txtSendMessagePayload" type="text" placeholder="message payload"></input>
+      <input id="btnSendMessage" type="button" value="Send"></input>
+        <!-- Last Message Received info -->
+      <div class="msg-info d-flex" >
+        <div>
+          Messages Count: <span id="messagesCount">0</span>
+        </div>
+        <div>
+          Last Action Type: <span id="lastMessageReceivedAction">-</span>
+        </div>
+      </div>
+    </div> 
+  
+    
 
     <!-- Contains Bldrs in an iframe, the URL is set later -->
     <iframe 
@@ -39,5 +51,23 @@
       height="90%">
     </iframe>
 
+    <style> 
+
+    .d-flex{
+      display: flex;
+    }
+ 
+    .msg-info div {
+      padding:4px;
+      margin: 2px;
+      border-radius: 5px;
+      background-color: #c7c7c7;
+    }
+
+    .send-actions > * {
+     margin-right: 0.5rem;
+    }
+
+    </style>
   </body>
 </html>
