--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       test: `random`,
     })
   </script>
-  <title>BLDRS</title>
+  <title>bldrs.ai</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
       // Single Page Apps for GitHub Pages
