--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       test: `random`,
     })
   </script>
-  <title>bldrs.ai</title>
+  <title>builders</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
       // Single Page Apps for GitHub Pages
