add satoshi font

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,300,400&display=swap" rel="stylesheet">
+
+
 
   <!-- Global site tag (gtag.js) - Google Analytics snippet -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-210924287-3"></script>
