--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Build every thing together: Collab and Share 3d models online" />
-  <meta name="keywords" content="ifc, ifc viewer, cad viewer, share ifc, share model, open source" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Build every thing together: Collab and Share 3d models online"/>
+  <meta name="keywords" content="ifc, ifc viewer, cad viewer, share ifc, share model, open source"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="theme-color" content="#000000"/>
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&amp;display=swap" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&amp;display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="/favicon.ico"/>
   <title>bldrs.ai</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
@@ -39,7 +32,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script>
+  <script type="application/javascript">
     const loader = document.createElement('script')
     const pathPrefix = window.location.pathname.startsWith('/Share') ? '/Share' : ''
     loader.setAttribute('src', pathPrefix + '/index.js')
