Checkpoint.  One test failing in CadView, few things commented out.  Camera weird.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <meta name="description" content="Build every thing together: Collab and Share 3d models online"/>
   <meta name="keywords" content="ifc, ifc viewer, cad viewer, share ifc, share model, open source"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -10,6 +10,7 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="icon" href="/favicon.ico"/>
+  <link rel="stylesheet" href="index.css" type="text/css"/>
   <title>bldrs.ai</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
